--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "react-nodejs-login",
+  "name": "front",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:7896",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "express-mysql-session": "^3.0.0",
-    "express-session": "^1.17.3",
-    "mysql2": "^3.4.0",
+    "axios": "^1.4.0",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
-    "react-scripts": "5.0.1",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "^5.0.1",
+    "rechart": "^0.0.1",
+    "recharts": "^2.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
